# bookmark-me

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  drizzle.config.ts  package.json  pnpm-lock.yaml  pyproject.toml
app/: config.py  cookie_parser.py  crypto.py  db.py  main.py  models.py  scheduler.py  schemas.py  sync_service.py  user_config.py  vault.py
app/fetchers/: __init__.py  base.py  reddit.py  x.py
app/routes/: accounts.py  bookmarks.py  settings.py
backend/backend/: settings.py
db/: db.ts  schema.ts
frontend/: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.mjs
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/bookmarks/: page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/: mode-toggle.tsx
frontend/src/components/home/: features.tsx  hero.tsx
frontend/src/components/layout/: footer.tsx  header.tsx  main-layout.tsx
manager/: bookmark.ts  user.ts
migrations/: env.py
migrations/versions/: 0001_initial.py
pdf-downloader/: docker-compose.yml  downloader.ts
scripts/: dev.sh  rebuild_vault.py  restore_from_vault.py  setup.sh
types/: bookmark.ts  user.ts
ui/: Dockerfile
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/app/settings/: page.tsx
ui/src/components/: clsx.ts  ui.tsx
ui/src/lib/: api.ts
