[project]
name = "bookmark-me-backend"
version = "0.1.0"
description = "Personal bookmark aggregator backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "apscheduler>=3.10,<4.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "cryptography>=42.0",
    "python-dateutil>=2.9",
    "pyyaml>=6.0.3",
]

[project.scripts]
bookmark-me-backend = "app.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
